--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,9 +1,9 @@
 .navbar {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     margin: 40px 0;
-    padding: 0 100px;
+    width: 100vw;
 
     a {
         transition: all 800ms ease-out;
